[package]
name = "guarddep"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Simple dependency security scanner"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
